Add pattern validation (#40)
* Add pattern check for email addresses
* Fix Bielefeld email address
* Add pattern check for URLs
* Fix DE/NI/Hagen URL
* Unrelated: add some website URLs to NI
* Unrelated: update validation README
* Set type and level as required
* Ensure URL type identifier is all uppercase letters
* ensure correct type and level
* fix rp data
* Use lowercase boolean
* Fix url type pattern and data
* Remove umlaute from URLs
* More strict URL checking

--- a/data/countries/de/by/data.yaml
+++ b/data/countries/de/by/data.yaml
@@ -297,7 +297,7 @@ state: Bayern
 district: Deggendorf
 urls:
   - type: WEBSITE
-    url: http://grüne-deggendorf.de/
+    url: http://xn--grne-deggendorf-0vb.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
