--- a/data/countries/de/ni/data.yaml
+++ b/data/countries/de/ni/data.yaml
@@ -1607,6 +1607,9 @@ country: DE
 state: Niedersachsen
 district: Osnabrück-Land
 city: Georgsmarienhütte
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-georgsmarienhuette.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -1626,7 +1629,7 @@ district: Osnabrück-Land
 city: Hagen
 urls:
   - type: WEBSITE
-    url: ''
+    url: http://www.diegrueneninhagenatw.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -1634,6 +1637,9 @@ country: DE
 state: Niedersachsen
 district: Osnabrück-Land
 city: Hasbergen
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-os-land.de/start/ortsverbaende/hasbergen/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -1641,6 +1647,9 @@ country: DE
 state: Niedersachsen
 district: Osnabrück-Land
 city: Hilter
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-hilter.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -1677,6 +1686,9 @@ country: DE
 state: Niedersachsen
 district: Osnabrück-Land
 city: Wallenhorst
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-wallenhorst.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
