Fix URL for Schmalkalden-Meiningen-Suhl (#53)

--- a/data/countries/de/th/data.yaml
+++ b/data/countries/de/th/data.yaml
@@ -219,6 +219,6 @@ level: DE:REGIONALVERBAND
 region: Schmalkalden-Meiningen-Suhl
 urls:
   - type: WEBSITE
-    url: http://www.gruene-sm.de/
+    url: https://gruene-sms.de/
   - type: FACEBOOK
     url: https://www.facebook.com/RVSMS/
