--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -62,6 +62,7 @@ level: DE:KREISVERBAND
 country: DE
 state: Brandenburg
 district: Elbe-Elster
+urls:
   - type: WEBSITE
     url: https://gruenee.de/home/
 ---
