--- a/data/countries/de/sl/data.yaml
+++ b/data/countries/de/sl/data.yaml
@@ -40,6 +40,7 @@ district: Saar-Pfalz
 level: DE:KREISVERBAND
 state: Saarland
 type: REGIONAL_CHAPTER
+urls
   - type: WEBSITE
     url: https://netzwerk.gruene-surfer.de/kv-saar-pfalz/
 ---
