--- a/data/countries/de/bw/data.yaml
+++ b/data/countries/de/bw/data.yaml
@@ -14,6 +14,8 @@ urls:
     url: https://www.facebook.com/gruenebw/
   - type: TWITTER
     url: https://twitter.com/GrueneBW
+  - type: WIKIPEDIA
+    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Baden-W%C3%BCrttemberg
 emails:
   - address: landesverband@gruene-bw.de
 ---
