--- a/data/countries/de/by/data.yaml
+++ b/data/countries/de/by/data.yaml
@@ -12,6 +12,8 @@ urls:
     url: https://twitter.com/Gruene_Bayern
   - type: INSTAGRAM
     url: https://www.instagram.com/gruene_bayern/
+  - type: WIKIPEDIA
+    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Bayern
 emails:
   - address: landesverband@bayern.gruene.de
 ---
