--- a/data/countries/de/hh/data.yaml
+++ b/data/countries/de/hh/data.yaml
@@ -18,6 +18,8 @@ urls:
     url: http://www.flickr.com/gruene_hamburg
   - type: YOUTUBE
     url: http://youtube.com/user/galhamburg
+  - type: WIKIPEDIA
+    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Hamburg
 emails:
   - address: info@hamburg.gruene.de
 ---
