--- a/data/countries/de/sn/data.yaml
+++ b/data/countries/de/sn/data.yaml
@@ -18,6 +18,8 @@ urls:
     url: https://www.flickr.com/photos/gruene_sachsen
   - type: YOUTUBE
     url: https://www.youtube.com/user/GrueneSachsen
+  - type: WIKIPEDIA
+    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Sachsen
 emails:
   - address: info@gruene-sachsen.de
 ---
