--- a/data/countries/de/st/data.yaml
+++ b/data/countries/de/st/data.yaml
@@ -16,6 +16,8 @@ urls:
     url: https://twitter.com/GRUENE_LSA
   - type: INSTAGRAM
     url: https://www.instagram.com/gruene_lsa/
+  - type: WIKIPEDIA
+    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Sachsen-Anhalt
 emails:
   - address: info@gruene-lsa.de
 ---
