--- a/data/countries/de/sl/data.yaml
+++ b/data/countries/de/sl/data.yaml
@@ -14,6 +14,8 @@ urls:
     url: https://www.facebook.com/GrueneSaar/
   - type: TWITTER
     url: https://twitter.com/Gruene_Saar
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_saar/
   - type: WIKIPEDIA
     url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Saarland
 emails:
