--- a/data/countries/de/sn/data.yaml
+++ b/data/countries/de/sn/data.yaml
@@ -14,6 +14,8 @@ urls:
     url: https://www.facebook.com/gruene.sachsen
   - type: TWITTER
     url: https://twitter.com/gruene_sachsen
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_sachsen/
   - type: FLICKR
     url: https://www.flickr.com/photos/gruene_sachsen
   - type: YOUTUBE
