Import OV for several districts in NW (#78)
* Import OV for NW/Mettmann
* Import OV for NW/Minden-Luebbecke
* Import OV for NW/Oberberg
* Import OV for NW/Recklinghausen
* Import OV for NW/Rhein-Berg
* Import OV for NW/Rhein-Erft-Kreis
* Import OV for NW/Rhein-Kreis-Neuss
* Import OV for NW/Siegen-Wittgenstein
* Import OV for NW/Soest
* Import OV for NW/Steinfurt
* Import OV for NW/Unna
* Import OV for NW/Viersen
* Import OV for NW/Warendorf
* Import OV for NW/Wesel

--- a/data/countries/de/nw/rheinisch-bergischer-kreis/data.yaml
+++ b/data/countries/de/nw/rheinisch-bergischer-kreis/data.yaml
@@ -85,3 +85,23 @@ urls:
     url: http://www.gruene-wermelskirchen.de/
 emails:
   - address: info@gruene-wermelskirchen.de
+---
+city: Kürten
+country: DE
+district: Rhein-Berg
+level: DE:ORTSVERBAND
+state: Nordrhein-Westfalen
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-kuerten.de
+---
+city: Overath
+country: DE
+district: Rhein-Berg
+level: DE:ORTSVERBAND
+state: Nordrhein-Westfalen
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-overath.de
