--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -178,3 +178,13 @@ urls:
     url: https://www.gruene-um.de/
   - type: FACEBOOK
     url: https://www.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-Uckermark-247133728649040/
+---
+type: REGIONAL_CHAPTER
+level: DE:ORTSVERBAND
+country: DE
+state: Brandenburg
+district: Dahme-Spreewald
+city: Zeuthen, Eichenwalde, Schulzendorf
+urls:
+  - type: WEBSITE
+    url: http://gruene-in-zes.blogspot.com/
