--- a/data/countries/de/sh/segeberg/data.yaml
+++ b/data/countries/de/sh/segeberg/data.yaml
@@ -14,7 +14,7 @@ emails:
 ---
 city: Bad Bramstedt
 country: DE
-district: Stormarn
+district: Segeberg
 level: DE:ORTSVERBAND
 state: Schleswig-Holstein
 type: REGIONAL_CHAPTER
@@ -26,7 +26,7 @@ urls:
 ---
 city: Norderstedt
 country: DE
-district: Stormarn
+district: Segeberg
 level: DE:ORTSVERBAND
 state: Schleswig-Holstein
 type: REGIONAL_CHAPTER
