Website URL change for DE/Hamburg (#92)

--- a/data/countries/de/hh/data.yaml
+++ b/data/countries/de/hh/data.yaml
@@ -9,7 +9,7 @@ country: DE
 state: Hamburg
 urls:
   - type: WEBSITE
-    url: https://hamburg.gruene.de/
+    url: https://www.gruene-hamburg.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.hamburg/
   - type: TWITTER
