Update URL for Speyer

--- a/data/countries/de/rp/data.yaml
+++ b/data/countries/de/rp/data.yaml
@@ -489,7 +489,7 @@ state: Rheinland-Pfalz
 district: Speyer
 urls:
   - type: WEBSITE
-    url: http://www.xn--grne-speyer-uhb.de/
+    url: https://www.xn--grne-speyer-uhb.de/
   - type: FACEBOOK
     url: https://www.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-Speyer-196532870398785/
 emails:
