Fix URL for Neu-Ulm (#99)

--- a/data/countries/de/by/data.yaml
+++ b/data/countries/de/by/data.yaml
@@ -543,7 +543,7 @@ state: Bayern
 district: Neu-Ulm
 urls:
   - type: WEBSITE
-    url: https://gruene-neu-ulm.th-vi.de/
+    url: https://gruene-neu-ulm.fe2.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.neu.ulm/
 ---
