Update URL for DE/SN/Dresden (#98)

--- a/data/countries/de/sn/data.yaml
+++ b/data/countries/de/sn/data.yaml
@@ -54,7 +54,7 @@ state: Sachsen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruenedresden.de
+    url: https://gruenedresden.de/
   - type: TWITTER
     url: https://twitter.com/gruene_dresden
   - type: FACEBOOK
