Update URL for Brandenburg/Dahme-Spreewald/ZES (#102)

--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -187,4 +187,4 @@ district: Dahme-Spreewald
 city: Zeuthen, Eichenwalde, Schulzendorf
 urls:
   - type: WEBSITE
-    url: http://gruene-in-zes.blogspot.com/
+    url: https://gruene-in-zes.blogspot.com/
