Update URL and name for NRW/Steinfurt/Hopsten (#104)

--- a/data/countries/de/nw/steinfurt/data.yaml
+++ b/data/countries/de/nw/steinfurt/data.yaml
@@ -42,7 +42,7 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-greven.de
 ---
-city: Hopsten
+city: Hopsten-Schale-Halverde
 country: DE
 district: Steinfurt
 level: DE:ORTSVERBAND
@@ -50,7 +50,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-hopsten.de
+    url: https://gruene-hopsten.net/
 ---
 city: Hörstel
 country: DE
