Update URL for BW/Rems-Murr/Waiblingen (#105)

--- a/data/countries/de/bw/rems-murr/data.yaml
+++ b/data/countries/de/bw/rems-murr/data.yaml
@@ -30,7 +30,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-waiblingen.de/
+    url: http://www.ali-waiblingen.de/
 ---
 city: Winterbach
 country: DE
